load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "monitor",
    srcs = [
        "base_monitor.go",
        "monitor.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/hlc",
        "//pkg/util/syncutil",
    ],
)
