load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "monitor",
    srcs = [
        "base_monitor.go",
        "monitor.go",
        "prom_monitor.go",
    ],
    importpath = "github.com/cockroachdb/cockroach/pkg/util/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/metric",
        "//pkg/util/syncutil",
        "@com_github_gogo_protobuf//proto",
        "@com_github_prometheus_client_model//go",
    ],
)

go_test(
    name = "monitor_test",
    srcs = ["prom_monitor_test.go"],
    embed = [":monitor"],
    deps = [
        "//pkg/util/leaktest",
        "//pkg/util/metric",
        "@com_github_stretchr_testify//require",
    ],
)
