load("//build/bazelutil/unused_checker:unused.bzl", "get_x_data")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "tests_test",
    srcs = [
        "example_test.go",
        "load_balance_test.go",
    ],
    args = ["-test.timeout=295s"],
    data = glob(["testdata/**"]),
    deps = [
        "//pkg/kv/kvserver/asim",
        "//pkg/kv/kvserver/asim/config",
        "//pkg/kv/kvserver/asim/gen",
        "//pkg/kv/kvserver/asim/metrics",
        "//pkg/testutils/datapathutils",
        "//pkg/util/log",
        "@com_github_cockroachdb_datadriven//:datadriven",
        "@com_github_guptarohit_asciigraph//:asciigraph",
        "@com_github_montanaflynn_stats//:stats",
        "@com_github_stretchr_testify//require",
    ],
)

get_x_data(name = "get_x_data")
